$Id: Changelog.txt,v 1.235 2018/05/07 11:05:16 nanard Exp $
miniUPnP client Changelog.

VERSION 2.1 : released 2018/05/07

2018/05/07:
  CMake Modernize and cleanup CMakeLists.txt
  Update MS Visual Studio projects

2018/04/30:
  listdevices: show devices sorted by XML desc URL

2018/04/26:
  Small fix in miniupnpcmodule.c (python module)
  Support cross compiling in Makefile.mingw

2018/04/06:
  Use SOCKET type instead of int (for Win64 compilation)
  Increments API_VERSION to 17

2018/02/22:
  Disable usage of MiniSSDPd when using -m option

2017/12/11:
  Fix buffer over run in minixml.c
  Fix uninitialized variable access in upnpreplyparse.c

2017/05/05:
  Fix CVE-2017-8798   Thanks to tin/Team OSTStrom

2016/11/11:
  check strlen before memcmp in XML parsing portlistingparse.c
  fix build under SOLARIS and CYGWIN

2016/10/11:
  Add python 3 compatibility to IGD test

VERSION 2.0 : released 2016/04/19

2016/01/24:
  change miniwget to return HTTP status code
  increments API_VERSION to 16

2016/01/22:
  Improve UPNPIGD_IsConnected() to check if WAN address is not private.
  parse HTTP response status line in miniwget.c

2015/10/26:
  snprintf() overflow check. check overflow in simpleUPnPcommand2()

2015/10/25:
  fix compilation with old macs
  fix compilation with mingw32 (for Appveyor)
  fix python module for python <= 2.3

2015/10/08:
  Change sameport to localport
    see https://github.com/miniupnp/miniupnp/pull/120
  increments API_VERSION to 15

2015/09/15:
  Fix buffer overflow in igd_desc_parse.c/IGDstartelt()
    Discovered by Aleksandar Nikolic of Cisco Talos

2015/08/28:
  move ssdpDiscoverDevices() to minissdpc.c

2015/08/27:
  avoid unix socket leak in getDevicesFromMiniSSDPD()

2015/08/16:
  Also accept "Up" as ConnectionStatus value

2015/07/23:
  split getDevicesFromMiniSSDPD
  add ttl argument to upnpDiscover() functions
  increments API_VERSION to 14

2015/07/22:
  Read USN from SSDP messages.

2015/07/15:
  Check malloc/calloc

2015/06/16: